# stockPortfolio

./: .coveragerc  .env  .env.test  .gitignore  README.md  pyproject.toml  tasks.py
documentation/: arkkitehtuuri.md  instructions.md  testausdokumentti.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml  tasks.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/: maksukortti.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: config.py  index.py
src/database/: db_connection.py  init_db.py
src/entities/: user.py
src/gui/: mainwindow.py
src/repositories/: stock_repository.py  user_repository.py
src/services/: stock_service.py  user_service.py
src/tests/: user_test.py
src/tests/entities/: user_test.py
src/tests/repositories/: stock_repo_test.py  user_repo_test.py
src/tests/services/: stock_service_test.py  user_service_test.py
src/ui/: gui.py  login_window.py  portfolio_info_winfow.py  portfolio_window.py  signup_window.py  start_window.py  stock_window.py
