[tool.poetry]
name = "stockportfolio"
version = "0.1.0"
description = "Course project for Ohjelmistotekniikka-course"
authors = ["shiftleino"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.6.0"
PyQt5 = "^5.15.6"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-dotenv = "^0.5.2"
coverage = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
